--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+/* Radix Font config */
+.radix-themes {
+  --default-font-family: var(--font-inter);
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
